WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186616
[LFC] Miscellaneous fixes to be able to layout <div> with fixed width/height
https://bugs.webkit.org/show_bug.cgi?id=186616
Summary
[LFC] Miscellaneous fixes to be able to layout <div> with fixed width/height
alan
Reported
2018-06-13 22:03:42 PDT
ssia.
Attachments
Patch
(13.17 KB, patch)
2018-06-13 22:13 PDT
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2018-06-13 22:13:33 PDT
Created
attachment 342726
[details]
Patch
alan
Comment 2
2018-06-13 22:14:30 PDT
I am sure other, a tiny bit more complex content works fine as well. I just haven't tried them yet.
alan
Comment 3
2018-06-14 07:27:35 PDT
Committed
r232839
: <
https://trac.webkit.org/changeset/232839
>
Radar WebKit Bug Importer
Comment 4
2018-06-14 07:28:20 PDT
<
rdar://problem/41124262
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug