Source/WebCore/layout/layouttree/LayoutBox.cpp
@@ -230,8 +230,9 @@ bool Box::isPaddingApplicable() const
 {
     // 8.4 Padding properties:
     // Applies to: all elements except table-row-group, table-header-group, table-footer-group, table-row, table-column-group and table-column
-    if (!m_elementAttributes)
+    if (isAnonymous())
         return false;
+
     auto elementType = m_elementAttributes.value().elementType;
     return elementType != ElementType::TableRowGroup
         && elementType != ElementType::TableHeaderGroup
